# pandects-app

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  ENVIRONMENT.md  Makefile  README.md  SECURITY.md  SUPPORT.md  dev-all.sh  pyrightconfig.json  update.sh
etl/: .env.example  AGENTS.md  README.md  pyproject.toml
etl/configs/: etl_pipeline.yaml  pipeline_config.yaml
etl/sql/migrations/: 20260409_pipeline_job_run_completed_stages.sql
etl/src/etl/: definitions.py
etl/src/etl/defs/: __init__.py  a_staging_asset.py  ai_repair_asset.py  b_pre_processing_asset.py  c_tagging_asset.py  d_ai_repair_asset.py  e_reconcile_tags.py  f_xml_asset.py  f_xml_repair_cycle_asset.py  g_sections_asset.py  gating_asset.py  h_taxonomy_asset.py  i_tx_metadata_asset.py  j_embed_sections_asset.py  jobs.py  k_tax_module_asset.py  pre_processing_asset.py  resources.py  staging_asset.py  tagging_asset.py  xml_asset.py  z_gating_asset.py
etl/src/etl/domain/: a_staging.py  ai_repair.py  b_pre_processing.py  c_tagging.py  classifier_model.py  (+14 more)
etl/tests/: test_a_staging_asset.py  test_a_staging_dedup.py  test_ai_repair_flow_guards.py  test_ai_repair_targeting.py  test_b_pre_processing.py  test_backfill_auto_verify_edgar.py  test_batch_keys.py  test_d_ai_repair_domain.py  test_d_ai_repair_enqueue_asset.py  test_d_ai_repair_poll_asset.py  test_dagster_asset_graph.py  test_db_utils.py  test_exhibit_classifier.py  test_f_xml.py  test_f_xml_asset.py  test_g_sections.py  test_g_sections_asset.py  test_h_taxonomy_asset.py  test_i_tx_metadata_asset.py  test_i_tx_metadata_domain.py  test_ingestion_cleanup_scope_resume.py  test_k_tax_module_asset.py  test_latest_sections_search.py  test_logical_job_runs.py  test_ner_article_audit.py  test_ner_inference_pretty_print.py  test_ner_xp_setup.py  test_openai_batch.py  test_page_classifier_revamp_postprocess.py  test_pipeline_state_sql.py  test_post_asset_refresh.py  test_regular_ingest_scope_resume.py  test_resources.py  test_stage_queue_alignment.py  test_summary_data.py  test_tax_clause_taxonomy.py  test_tax_module_domain.py  test_taxonomy_model.py  test_toc_validation_audit.py
etl/utils/: train_classifier.py
(+568 files in other folders)
