[project]
name = "etl"
requires-python = ">=3.9,<=3.13.3"
version = "0.1.0"
dependencies = [
    "dagster==1.11.2",
    "datasketch>=1.6.0",
    "beautifulsoup4>=4.13",
    "pandas>=2.3",
    "numpy>=2.0",
    "torch>=2.6",
    "pytorch-lightning>=2.5",
    "lightning>=2.5",
    "scikit-learn>=1.7",
    "scipy>=1.13",
    "requests>=2.31",
    "joblib>=1.5",
    "xgboost>=3.0",
    "transformers>=4.54",
    "nltk>=3.9",
    "openai>=1.100",
    "optuna>=4.4",
    "optuna-integration[pytorch_lightning]>=4.4",
    "tensorboard>=2.20",
    "huggingface-hub>=0.34",
    "mysqlclient>=2.2",
    "basedpyright>=1.36",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etl"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "etl"
registry_modules = [
    "etl.components.*",
]


