[project]
name = "etl"
requires-python = ">=3.11,<=3.13.3"
version = "0.1.0"
dependencies = [
    "dagster==1.13.1",
    "datasketch>=1.10.0",
    "beautifulsoup4>=4.15.0",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "torch>=2.12.0",
    "pytorch-lightning>=2.6.5",
    "lightning>=2.6.5",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "requests>=2.34.2",
    "joblib>=1.5",
    "xgboost>=3.0",
    "transformers>=5.12.0",
    "nltk>=3.9",
    "openai>=2.41.1",
    "voyageai>=0.4.0",
    "optuna>=4.9.0",
    "optuna-integration[pytorch_lightning]>=4.4",
    "sklearn-crfsuite>=0.5",
    "tensorboard>=2.20",
    "huggingface-hub>=1.19.0",
    "mysqlclient>=2.2",
    "pyarrow>=23",
    "basedpyright>=1.39.7",
]

[dependency-groups]
dev = [
    "dagster-webserver==1.13.1",
    "dagster-dg-cli==1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etl"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "etl"
registry_modules = [
    "etl.components.*",
]
